...
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_info_details"
                app:tint="#BFA3E8" />
        </FrameLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:backgroundTint="@color/purple"
            android:text="Add"
            android:textColor="@color/dark"
            android:textStyle="bold"
...
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="11dp"
            android:src="@android:drawable/btn_star_big_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskName"
            app:tint="#FFFFFF" />

        <EditText
            android:id="@+id/TaskName"
            android:layout_width="237dp"
            android:layout_height="45dp"
...
