...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/btnAddTask"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/item_task_card" />

    <Button
        android:id="@+id/btnAddTask"
...
